padding for body so fixed navbar does not overlap

--- a/css/site.scss
+++ b/css/site.scss
@@ -12,7 +12,8 @@ html {
 
 
 body {
-  background-image: url("../../assets/images/dark_camo.png"), 
+  background-image: url("../../assets/images/dark_camo.png"); 
+  padding-top: 50px;
 }
 
 /*******************************************************/
